--- a/src/renderer/scss/_ViewVisitor.scss
+++ b/src/renderer/scss/_ViewVisitor.scss
@@ -35,7 +35,11 @@
     }
 }
 
-.visitor-noexists {
-    @extend .warder-noexist;
-    margin-top: initial;
+.visitors {
+    position: relative;
+    top: 50px;
+    .visitor-noexists {
+        @extend .warder-noexist;
+        margin-top: initial;
+    }
 }
