--- a/src/renderer/scss/_webview.scss
+++ b/src/renderer/scss/_webview.scss
@@ -2,5 +2,5 @@ webview {
     height: 800px;
     width: 50%;
     float: left;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
